# Hypodermic

./: .gitignore  .hgignore  .travis.yml  CMakeLists.txt  ClickToBuild.bat  Hypodermic.props  Hypodermic.sln  LICENSE  README.md  appveyor.yml  boost.props  conanfile.py  hypodermic.props  premake4.lua
Hypodermic/: Action.h  ActivatedData.h  ActivatedRegistrationInfo.h  ActivatingData.h  ActivationException.h  ActivationHandler.h  ActivationHandlers.h  ActivationRegistry.h  ActivationResult.h  ActivationStack.h  AnyArgument.h  ArgResolver.h  ArgumentPack.h  ArgumentResolver.h  As.h  AsSelf.h  AutowireableConstructor.h  AutowireableConstructorRegistrationDescriptor.h  AutowiredConstructor.h  AutowiredType.h  Behavior.h  BoostUuidHashFunctor.h  CMakeLists.txt  CircularDependencyDetector.cpp  CircularDependencyDetector.h  CircularDependencyException.h  ComponentContext.h  ComponentRegistration.cpp  ComponentRegistration.h  ComponentRegistrationLifetimeDecorator.cpp  ComponentRegistrationLifetimeDecorator.h  ComponentRegistry.cpp  ComponentRegistry.h  Config.h  ConsoleLoggerSink.h  ConstructorDescriptor.h  ConstructorTypologyDeducer.h  Container.cpp  Container.h  Container.hpp  (+174 more)
Hypodermic.Tests/: Benchmark.h  CMakeLists.txt  CircularDependencyTests.cpp  ContainerBuilderTests.cpp  ContainerBuilderValidationTests.cpp  ContainerTests.IncompleteTypeResolution.cpp  ContainerTests.cpp  DefaultConstructibleRegistrationTests.cpp  DefaultConstructibleTests.cpp  DurationHumanizer.h  DurationUnit.h  FactoryTests.cpp  GithubTests.cpp  Hypodermic.Tests.vcxproj  Hypodermic.Tests.vcxproj.filters  IsCompleteTests.cpp  LitteralDurationUnit.h  MemoryTests.cpp  MissingConstructorRegistrationTests.cpp  NamedTests.cpp  NestedContainerTests.cpp  PercentileCalculator.h  PerformanceTests.cpp  PersistentInstanceRegistrationTests.cpp  ProvidedConstructorRegistrationTests.cpp  ProvidedDependenciesTests.cpp  ProvidedInstanceFactoryRegistrationTests.cpp  ProvidedInstanceRegistrationTests.cpp  RegistrationTests.cpp  ResolveConstPtrTests.cpp  RuntimeRegistrationTests.cpp  TestingTypes.ForwardDeclaredDependency.cpp  TestingTypes.ForwardDeclaredDependency.h  TestingTypes.h  UseIfNoneTests.cpp  main.cpp  stdafx.cpp  stdafx.h
debian/: changelog  control  copyright  libhypodermic-dev.install  libhypodermic-dev.lintian-overrides  libhypodermic0.install  libhypodermic0.lintian-overrides
resources/: home_page_simple_diagram_source.txt
test_package/: CMakeLists.txt
test_package/src/: example.cpp
